--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 ponctual/drift_vs_droplet_placement/**/*.json
 properties/*.json
 /datasets/**/*.json
+/analysis/speed_division/coverage/data/coverages.json
