--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ponctual/drift_vs_droplet_placement/**/*.json
 properties/*.json
 /datasets/**/*.json
 /analysis/speed_division/coverage/data/coverages.json
+/analysis/temperature/csv/
