halding long experiments

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@
 *.eps
 *.avi
 analysis/drift_vs_droplet_placement/**/*.json
-properties/*.json
-/datasets/**/*.json
+analysis/temperature_long_xp/extracted_data
+analysis/temperature_long_xp/tmp
 /analysis/speed_division/coverage/data/coverages.json
 /analysis/temperature_analysis/csv/
 /analysis/temperature_prediction/data
 /figures/exploration/data/coverages.json
 csv/**/*.csv
+properties/*.json
+/datasets/**/*.json
