--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 analysis/drift_vs_droplet_placement/**/*.json
 analysis/temperature_long_xp/extracted_data
 analysis/temperature_long_xp/tmp
+/analysis/temperature_long_xp/csv
 /analysis/speed_division/coverage/data/coverages.json
 /analysis/temperature_analysis/csv/
 /analysis/temperature_prediction/data
