upgraded analysis to different frame step and windows size

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.avi
 analysis/drift_vs_droplet_placement/**/*.json
 analysis/temperature_long_xp/extracted_data
+analysis/temperature_long_xp/extracted_data_old
 analysis/temperature_long_xp/tmp
 /analysis/temperature_long_xp/csv
 /analysis/temperature_long_xp/displacement_csv
