analyiss of ph experiments and adding xpname to csv export

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@
 *.avi
 analysis/drift_vs_droplet_placement/**/*.json
 analysis/temperature_long_xp/extracted_data
-analysis/temperature_long_xp/extracted_data_old
 /analysis/temperature_long_xp/displacement_csv
-/analysis/temperature_long_xp/displacement_csv_old
 /analysis/temperature_long_xp/time_feature_csv
-/analysis/temperature_long_xp/time_feature_csv_old
+analysis/temperature_long_xp/time_speed_csv
 analysis/temperature_long_xp/tmp
+analysis/pH_long_xp/extracted_data
+analysis/pH_long_xp/displacement_csv
+analysis/pH_long_xp/time_feature_csv
+analysis/pH_long_xp/time_speed_csv
+analysis/pH_long_xp/tmp
 /analysis/speed_division/coverage/data/coverages.json
 /analysis/temperature_analysis/csv/
 /analysis/temperature_prediction/data
