movie for SM5 with time bar

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ properties/*.json
 /figures/speed_sort/csv_all
 /figures/speed_sort/csv
 /analysis/dye_release/data/
+SI/data
+/figures/SI/data/average_speed.csv
